--- a/src/components/newsArticle.styles.css
+++ b/src/components/newsArticle.styles.css
@@ -1,7 +1,129 @@
+.news-container{
+    height: 450px
+}
+
+.news-scroller{
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    margin: auto;
+    min-width: 470px;
+    height: 450px;
+    font-family: sans-serif;
+}
+
+.scroller-arrow{
+    width: 10%;
+    background-color: rgb(230, 230, 230);
+    font-size: xx-large;
+    cursor: pointer;
+    display: table-cell;
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.scroller-arrow:hover{
+    background-color: #aaaa11;
+}
+
+.arrow{
+    position: relative;
+    top:50%;
+    font-weight: bold;
+}
+
+.news-article{
+    display: flex;
+    flex-direction: column;
+    margin: 0 10%;
+    width: 650px;
+    border-radius: 5px;
+
+    
+    scroll-behavior: smooth;
+}
+
+.news-article-title{
+    height: 60px;
+    margin: 15px 0 0 0;
+}
+
+.news-article-description{
+    height: 170px;
+}
+
+.news-article-image{
+    height: 100%;
+    width: 100%;
+}
+
 img{
     max-width: 100%; 
-    height: 200px; 
-    width: 200px;
+    height: 100%; 
+    width: 100%;
     object-fit: cover;
+    border-radius: 5px;
+    position: relative;
+}
 
+.fade {
+    -webkit-animation-name: fadein;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fadein;
+    animation-duration: 1.5s;
+  }
+  
+  @-webkit-keyframes fadein {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  @keyframes fadein {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+
+@media only screen and (max-width:858px){
+    .scroller-arrow{
+        width: 10%;
+    }
+    
+    .news-scroller{
+        width: 90%;
+    }
+
+    .news-article{
+        width: 450px;
+    }
+
+    .news-article-title{
+        height: 60px;
+    }
+    
+    .news-article-description{
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width:656px){
+    .scroller-arrow{
+        width: 10%;
+    }
+    
+    .news-scroller{
+        width: 90%;
+    }
+
+    .news-article{
+        width: 450px;
+    }
+
+    .news-article-title{
+        height: 60px;
+    }
+    
+    .news-article-description{
+        height: 230px;
+        overflow: hidden;
+    }
 }
