--- a/src/components/newsArticle.styles.css
+++ b/src/components/newsArticle.styles.css
@@ -1,5 +1,6 @@
 .news-container{
-    height: 450px
+    height: 450px;
+    margin: 2em;
 }
 
 .news-scroller{
@@ -38,8 +39,6 @@
     margin: 0 10%;
     width: 650px;
     border-radius: 5px;
-
-    
     scroll-behavior: smooth;
 }
 
@@ -55,15 +54,23 @@
 .news-article-image{
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
-img{
+.article-image{
     max-width: 100%; 
     height: 100%; 
     width: 100%;
     object-fit: cover;
     border-radius: 5px;
     position: relative;
+    transition: transform 1s ease;
+}
+
+.article-image:hover{
+    transform: scale(1.3);
+    opacity: .7;
+    animation-duration: 1.5s; 
 }
 
 .fade {
