--- a/src/components/Joke/joke.styles.css
+++ b/src/components/Joke/joke.styles.css
@@ -23,3 +23,13 @@
     font-size       : 2rem;
     border-radius   : 50%;
 }
+
+@media only screen and (max-width: 748px) {
+    .joke-header {
+        font-size: 30px;
+    }
+
+    .joke {
+        font-size: 22px;
+    }
+}
