--- a/src/components/newsArticle.styles.css
+++ b/src/components/newsArticle.styles.css
@@ -1,136 +1,155 @@
-.news-container{
+.news-container {
     height: 450px;
     margin: 2em;
 }
 
-.news-scroller{
-    display: flex;
+.news-scroller {
+    display       : flex;
     flex-direction: row;
-    width: 80%;
-    margin: auto;
-    min-width: 470px;
-    height: 450px;
-    font-family: sans-serif;
+    width         : 80%;
+    margin        : auto;
+    min-width     : 375px;
+    height        : 450px;
+    font-family   : sans-serif;
 }
 
-.scroller-arrow{
-    width: 10%;
+.scroller-arrow {
+    width           : 10%;
     background-color: rgb(230, 230, 230);
-    font-size: xx-large;
-    cursor: pointer;
-    display: table-cell;
-    border-radius: 5px;
-    transition: 0.3s ease;
+    font-size       : xx-large;
+    cursor          : pointer;
+    display         : table-cell;
+    border-radius   : 5px;
+    transition      : 0.3s ease;
 }
 
-.scroller-arrow:hover{
+.scroller-arrow:hover {
     background-color: #aaaa11;
 }
 
-.arrow{
-    position: relative;
-    top:50%;
+.arrow {
+    position   : relative;
+    top        : 50%;
     font-weight: bold;
 }
 
-.news-article{
-    display: flex;
-    flex-direction: column;
-    margin: 0 10%;
-    width: 650px;
-    border-radius: 5px;
+.news-article {
+    display        : flex;
+    flex-direction : column;
+    margin         : 0 10%;
+    width          : 650px;
+    border-radius  : 5px;
     scroll-behavior: smooth;
 }
 
-.news-article-title{
+.news-article-title {
     height: 60px;
     margin: 15px 0 0 0;
 }
 
-.news-article-description{
+.news-article-description {
     height: 170px;
 }
 
-.news-article-image{
-    height: 100%;
-    width: 100%;
+.news-article-image {
+    height  : 100%;
+    width   : 100%;
     overflow: hidden;
 }
 
-.article-image{
-    max-width: 100%; 
-    height: 100%; 
-    width: 100%;
-    object-fit: cover;
+.article-image {
+    max-width    : 100%;
+    height       : 100%;
+    width        : 100%;
+    object-fit   : cover;
     border-radius: 5px;
-    position: relative;
-    transition: transform 1s ease;
+    position     : relative;
+    transition   : transform 1s ease;
 }
 
-.article-image:hover{
-    transform: scale(1.3);
-    opacity: .7;
-    animation-duration: 1.5s; 
+.article-image:hover {
+    transform         : scale(1.3);
+    opacity           : .7;
+    animation-duration: 1.5s;
 }
 
 .fade {
-    -webkit-animation-name: fadein;
+    -webkit-animation-name    : fadein;
     -webkit-animation-duration: 1.5s;
-    animation-name: fadein;
-    animation-duration: 1.5s;
-  }
-  
-  @-webkit-keyframes fadein {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
-  
-  @keyframes fadein {
-    from {opacity: .4} 
-    to {opacity: 1}
-  }
+    animation-name            : fadein;
+    animation-duration        : 1.5s;
+}
 
-@media only screen and (max-width:858px){
-    .scroller-arrow{
+@-webkit-keyframes fadein {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fadein {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@media only screen and (max-width:858px) {
+    .scroller-arrow {
         width: 10%;
     }
-    
-    .news-scroller{
+
+    .news-scroller {
         width: 90%;
     }
 
-    .news-article{
+    .news-article {
         width: 450px;
     }
 
-    .news-article-title{
+    .news-article-title {
         height: 60px;
     }
-    
-    .news-article-description{
+
+    .news-article-description {
         height: 200px;
     }
 }
 
-@media only screen and (max-width:656px){
-    .scroller-arrow{
-        width: 10%;
-    }
-    
-    .news-scroller{
-        width: 90%;
+@media only screen and (max-width: 748px) {
+    .news-container {
+        height: 600px;
+        margin: 5% 0;
     }
 
-    .news-article{
-        width: 450px;
+    .news-scroller {
+        width: 75%;
     }
 
-    .news-article-title{
-        height: 60px;
+    .scroller-arrow {
+        width: 15%;
     }
-    
-    .news-article-description{
-        height: 230px;
-        overflow: hidden;
+
+    .news-article {
+        width : 100%;
+        margin: 5px;
+    }
+
+    .news-article-image {
+        height: 75%;
+        width : 75%;
+        margin: auto;
+    }
+
+    .news-article-description {
+        width : 80%;
+        height: 200px;
+        margin: 5% auto;
     }
 }
